tests/baselines/reference/awaitBindingElement10.errors.txt
tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement10.ts(9,32): error TS1310: 'await' expression is not allowed in an initializer.


==== tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement10.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    declare var a: number;
    declare var ar: number[];
    declare var pa: Promise<number>;
    declare var par: Promise<number[]>;
    async function func([ x = await pa ]): Promise<void> {
                                   
!!! error TS1310: 'await' expression is not allowed in an initializer.
    }
    